src/objects/UDIT__c.object
<CustomObject>
    <fields>
        <fullName>Problem_with_your_memory_after_cannabis__c</fullName>
        <inlineHelpText>6. How often in the past 6 months have you had a problem with you memory or concentration after using cannabis?</inlineHelpText>
        <label>Problem with your memory after cannabis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Less than monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_referral_1__c</fullName>
        <label>Reason for referral 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_referral_2__c</fullName>
        <label>Reason for referral 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_referral_3__c</fullName>
        <label>Reason for referral 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_been_identified_required_assessment__c</fullName>
        <inlineHelpText>Have risks been identified that required risk assessments</inlineHelpText>
        <label>Risk been identified required assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not at this time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_1_Type__c</fullName>
        <label>Service 1 Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_2_Type__c</fullName>
        <label>Service 2 Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_3_Type__c</fullName>
        <label>Service 3 Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_consent_form_for_referral_A__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You and the service user completed and signed a consent form for referral and release of AUDIT, if appropriate</inlineHelpText>
        <label>Signed consent form for referral A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_consent_form_for_referral_C__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You and the service user completed and signed a consent form for referral and release of CUDIT - R, if appropriate</inlineHelpText>
        <label>Signed consent form for referral C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_consent_form_for_referral_D__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You and the service user completed and signed a consent form for referral and release of DUDIT, if appropriate</inlineHelpText>
        <label>Signed consent form for referral D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_score_for_alcohol_related_problems__c</fullName>
        <formula>AUDIT_Sub_Score_7__c + AUDIT_Sub_Score_8__c + AUDIT_Sub_Score_9__c + AUDIT_Sub_Score_10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub score for alcohol related problems:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_score_for_dependence__c</fullName>
        <formula>AUDIT_Sub_Score_4__c + AUDIT_Sub_Score_5__c + AUDIT_Sub_Score_6__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub score for dependence:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_score_relating_to_consumption__c</fullName>
        <formula>AUDIT_Sub_Score_1__c + AUDIT_Sub_Score_2__c + AUDIT_Sub_Score_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub score relating to consumption:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_using_recovering_from_cannabis__c</fullName>
        <inlineHelpText>5. How often is the past 6 months have you devoted a great deal of your time to getting, using or recovering from cannabis?</inlineHelpText>
        <label>Time using/recovering from cannabis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Less than monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Times_you_take_drugs_on_a_typical_day__c</fullName>
        <inlineHelpText>Frequency per day
3. How many times do you take drugs on a typical day when you use drugs?</inlineHelpText>
        <label>Times you take drugs on a typical day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1-2</fullName>
                </value>
                <value>
                    <fullName>3-4</fullName>
                </value>
                <value>
                    <fullName>5-6</fullName>
                </value>
                <value>
                    <fullName>7 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_DUDIT_Score__c</fullName>
        <formula>DUDIT_Sub_Score_1__c + DUDIT_Sub_Score_2__c + DUDIT_Sub_Score_3__c + DUDIT_Sub_Score_4__c + DUDIT_Sub_Score_5__c + DUDIT_Sub_Score_6__c + DUDIT_Sub_Score_7__c + DUDIT_Sub_Score_8__c + DUDIT_Sub_Score_9__c + DUDIT_Sub_Score_10__c + DUDIT_Sub_Score_11__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total DUDIT Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_more_than_one_drug_per_occasion__c</fullName>
        <inlineHelpText>Poly-drug use
2. Do you use more than one type of drug on the same occasion?</inlineHelpText>
        <label>Use more than one drug per occasion?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Once a month or less often</fullName>
                </value>
                <value>
                    <fullName>2-4 times a month</fullName>
                </value>
                <value>
                    <fullName>2-3 times a week</fullName>
                </value>
                <value>
                    <fullName>4 times a week or more often</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_cannabis_over_the_past_six_months__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you used any cannabis over the past six months?</inlineHelpText>
        <label>Used cannabis over the past six months?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>You_needed_drugs_after_heavy_drug_use__c</fullName>
        <inlineHelpText>‘Eye opener’ or Hair of the dog
8. How often over the past year have you needed to take a drug the morning after heavy drug use the day before?</inlineHelpText>
        <label>You needed drugs after heavy drug use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Less often than once a month</fullName>
                </value>
                <value>
                    <fullName>Every month</fullName>
                </value>
                <value>
                    <fullName>Every week</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>You_unable_to_stop_drugs_once_started__c</fullName>
        <inlineHelpText>Objective: Loss of control
6. Has it happened, over the past year that you have not been able to stop taking drugs once you started?</inlineHelpText>
        <label>You unable to stop drugs once started</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Less often than once a month</fullName>
                </value>
                <value>
                    <fullName>Every month</fullName>
                </value>
                <value>
                    <fullName>Every week</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>You_use_cannabis_physically_hazardous__c</fullName>
        <inlineHelpText>7. How often do you use cannabis in situations that could be physically hazardous, such as driving, operating machinery, or caring for children:</inlineHelpText>
        <label>You use cannabis physically hazardous</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Less than monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily or almost daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>UDIT</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UDIT-{ddmmyy}-{000}</displayFormat>
        <label>UDIT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UDIT</pluralLabel>
    <recordTypes>
        <fullName>AUDIT</fullName>
        <active>true</active>
        <description>AUDIT - Screening Tool (World Health Organisation)</description>
        <label>AUDIT</label>
    </recordTypes>
    <recordTypes>
        <fullName>CUDIT</fullName>
        <active>true</active>
        <description>Cannabis Screening Tool Domain - CUDIT-R</description>
        <label>CUDIT</label>
    </recordTypes>
    <recordTypes>
        <fullName>DUDIT</fullName>
        <active>true</active>
        <description>Screening Tool Domain – DUDIT</description>
        <label>DUDIT</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>